Made platform integrations into its own package, which is added as a submodule to this project

--- a/Assets/EULA.html
+++ b/Assets/EULA.html
@@ -39,6 +39,8 @@
 
 <p>You agree that <span class="company_name">Contraband Software</span> may collect and use technical data and related information—including but not limited to technical information about your device, system and application software, and peripherals—that is gathered periodically to facilitate the provision of software updates, product support, and other services to you (if any) related to the <span class="app_name">Springman</span> Application. <span class="company_name">Contraband Software</span> may use this information, as long as it is in a form that does not personally identify you, to improve its products or to provide services or technologies to you.</p>
 
+<p>You can find our privacy policy and that of any third-party we work with at <a href="https://contraband.software/privacy-policy">our website.</a></p>
+
 <h3>Termination</h3>
 
 <p>This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to <span class="company_name">Contraband Software</span>.</p>
